<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:paddingBottom="20dp"
        tools:context=".fragment.Step2Fragment">
    <TextView
            android:text="@string/moneyme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="23sp"/>
    <TextView
            android:id="@+id/dialog_section1_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_section1_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_title"
            android:layout_marginTop="50dp"
            android:textColor="@color/colorAccent"
            android:textSize="17sp"/>
    <Button
            android:id="@+id/dialog_section1_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_section1_btn"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@+id/dialog_section1_title"/>

    <TextView
            android:id="@+id/dialog_section2_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_section2_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_section1_btn"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorAccent"
            android:textSize="17sp"/>
    <Button
            android:id="@+id/dialog_section2_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_section2_btn"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@+id/dialog_section2_title"/>
</androidx.constraintlayout.widget.ConstraintLayout>